[project]
name = "fork-map"
version = "0.1.0"
description = "Like Python's map, but uses os.fork to multiprocess."
authors = [{ name = 'Tom Rutherford', email = 'foreverwintr@gmail.com' }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = ["psutil (>=7.0.0,<8.0.0)"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
